# zap

./: .gitignore  Dockerfile  LLM.md  Makefile  README.md  go.mod  go.sum  mdx-components.tsx  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: deploy.yml  release.yml
app/: global.css  layout.tsx  page.tsx
app/docs/: layout.tsx  page.mdx
app/docs/architecture/: page.mdx
app/docs/consensus/: page.mdx
app/docs/gateway/: page.mdx
app/docs/rust-api/: page.mdx
app/docs/tools/: page.mdx
app/docs/transports/: page.mdx
app/docs/whitepaper/: page.mdx
cmd/zap-sidecar/: main.go
docs/: ZAP-WHITEPAPER.md
internal/: mcp.go
internal/datastore/: proxy.go
internal/documentdb/: proxy.go
internal/kv/: proxy.go
internal/sql/: proxy.go
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  protocol.rs  server.rs
schema/: zap.zap
