[workspace]

[package]
name = "hanzo-zap"
version = "1.0.0"
edition = "2021"
description = "ZAP — Zero-copy Agent Protocol. Binary RPC server with object capabilities."
license = "MIT"
repository = "https://github.com/hanzoai/zap"
keywords = ["zap", "rpc", "binary-protocol", "websocket", "ai"]
categories = ["network-programming", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "hanzo-zap"
path = "src/main.rs"

[lib]
name = "hanzo_zap"
path = "src/lib.rs"
